--- a/fabric/fabric-scripts/hlfv12/composer/docker-compose.yml
+++ b/fabric/fabric-scripts/hlfv12/composer/docker-compose.yml
@@ -56,6 +56,7 @@ services:
         - ./:/etc/hyperledger/configtx
         - ./crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/peer/msp
         - ./crypto-config/peerOrganizations/org1.example.com/users:/etc/hyperledger/msp/users
+        # - backup_peer:/var/hyperledger/production
     depends_on:
       - orderer.example.com
       - couchdb
