--- a/biobank-plugin/public/js/jszip/package.json
+++ b/biobank-plugin/public/js/jszip/package.json
@@ -44,8 +44,8 @@
     "grunt-contrib-connect": "~2.0.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~4.0.1",
-    "grunt-saucelabs": "Stuk/grunt-saucelabs#v10.0.0",
-    "jshint": "~2.9.1",
+    "grunt-saucelabs": "github:Stuk/grunt-saucelabs#v10.0.0",
+    "jshint": "^2.10.2",
     "jszip-utils": "~0.0.2",
     "package-json-versionify": "1.0.2",
     "qunit": "~2.9.2",
