--- a/fabric/package.json
+++ b/fabric/package.json
@@ -55,6 +55,7 @@
     "insert_license": false
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0"
   }
 }
