--- a/fabric/package.json
+++ b/fabric/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "minimatch": "^3.0.4"
   }
 }
