--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,44 @@
-certifi==2019.11.28
-cffi==1.13.2
+alabaster==0.7.12
+asn1crypto==0.24.0
+Babel==2.6.0
+biothings-client==0.2.0
+certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
+conda==4.5.12
+cryptography==2.4.2
+Django==2.1.7
+docutils==0.14
 idna==2.8
-mod-wsgi==4.7.0
-postgres==3.0.0
-psycopg2==2.8.4
-psycopg2-binary==2.8.4
-psycopg2-pool==1.1
+imagesize==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+mygene==3.1.0
+nltk==3.4.5
+nose==1.3.7
+packaging==19.0
+psycopg2==2.7.7
+psycopg2-binary==2.8.2
+pycosat==0.6.3
 pycparser==2.19
-python-oauth2==1.1.1
-requests==2.22.0
+Pygments==2.3.1
+pyOpenSSL==18.0.0
+pyparsing==2.4.0
+PySocks==1.6.8
+python-oauth2==1.1.0
+pytz==2018.9
+requests==2.21.0
 requests-toolbelt==0.9.1
-threaded==4.0.8
-urllib3==1.25.7
+ruamel-yaml==0.15.46
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==2.0.1
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+urllib3==1.24.1
+virtualenv==16.7.9
